@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2008-2010, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2008-2012, Image Engine Design Inc. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -36,12 +36,14 @@
 #include "IECoreGL/Font.h"
 #include "IECoreGL/ToGLMeshConverter.h"
 #include "IECoreGL/MeshPrimitive.h"
+#include "IECoreGL/ShaderStateComponent.h"
 
 #include "IECore/MeshPrimitive.h"
 
 using namespace IECoreGL;
 using namespace std;
 using namespace boost;
+using namespace Imath;
 
 IE_CORE_DEFINERUNTIMETYPED( Font );
 
@@ -59,7 +61,7 @@ IECore::FontPtr Font::coreFont()
 	return m_font;
 }
 
-ConstMeshPrimitivePtr Font::mesh( char c )
+ConstMeshPrimitivePtr Font::mesh( char c ) const
 {
 	MeshMap::const_iterator it = m_meshes.find( c );
 	if( it!=m_meshes.end() )
@@ -74,7 +76,7 @@ ConstMeshPrimitivePtr Font::mesh( char c )
 	return mesh;
 }
 
-ConstAlphaTexturePtr Font::texture()
+ConstAlphaTexturePtr Font::texture() const
 {
 	if( m_texture )
 	{
@@ -87,4 +89,60 @@ ConstAlphaTexturePtr Font::texture()
 	Imath::V2i s = image->getDataWindow().size() + Imath::V2i( 1 );
 	m_texture = new AlphaTexture( s.x, s.y, y );
 	return m_texture;
+}
+
+void Font::renderSprites( const std::string &text ) const
+{
+	Box2f charBound = m_font->bound();
+	V2f origin( 0 );
+
+	float sStep = 1.0f / 16.0f;
+	float tStep = 1.0f / 8.0f;
+	float eps = 0.001; // a small inset seems necessary to avoid getting the border of the adjacent letters
+	for( unsigned int i=0; i<text.size(); i++ )
+	{
+		char c = text[i];
+		int tx = c % 16;
+		int ty = 7 - (c / 16);
+
+		glBegin( GL_QUADS );
+
+			glTexCoord2f( tx * sStep + eps, ty * tStep + eps );
+			glVertex2f( origin.x + charBound.min.x, origin.y + charBound.min.y );
+
+			glTexCoord2f( (tx + 1) * sStep - eps, ty * tStep + eps );
+			glVertex2f( origin.x + charBound.max.x, origin.y + charBound.min.y );
+
+			glTexCoord2f( (tx + 1) * sStep - eps, (ty + 1) * tStep - eps );
+			glVertex2f( origin.x + charBound.max.x, origin.y + charBound.max.y );
+
+			glTexCoord2f( tx * sStep + eps, (ty + 1) * tStep - eps);
+			glVertex2f( origin.x + charBound.min.x, origin.y + charBound.max.y );
+
+		glEnd();
+		if( i < text.size() - 1 )
+		{
+			origin += m_font->advance( c, text[i+1] );
+		}
+	}
+
+}
+
+void Font::renderMeshes( const std::string &text, const State *state, IECore::TypeId style ) const
+{
+	Shader *shader = state->get<ShaderStateComponent>()->shader();
+	glPushMatrix();
+
+		for( unsigned i=0; i<text.size(); i++ )
+		{
+			ConstMeshPrimitivePtr m = mesh( text[i] );
+			m->setupVertexAttributes( shader );
+			m->render( state, style );
+			if( i < text.size() - 1 )
+			{
+				glTranslate( m_font->advance( text[i], text[i+1] ) );
+			}
+		}
+
+	glPopMatrix();
 }
