@@ -1,6 +1,6 @@
 ##########################################################################
 #
-#  Copyright (c) 2007-2012, Image Engine Design Inc. All rights reserved.
+#  Copyright (c) 2012, Image Engine Design Inc. All rights reserved.
 #
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -32,39 +32,23 @@
 #
 ##########################################################################
 
+import unittest
+
 import IECore
+import IECoreGL
 
-from Shader import *
-from State import *
-from ShaderManager import *
-from Renderer import *
-from Group import *
-from Texture import *
-from ImmediateRenderer import *
-from NameStateComponent import *
-from HitRecord import *
-from Selection import *
-from Camera import *
-from Image import *
-from PointsPrimitive import *
-from Orientation import *
-from CurvesPrimitiveTest import *
-from MeshPrimitiveTest import *
-from AlphaTextureTest import *
-from LuminanceTextureTest import *
-from UserAttributesTest import *
-from DeferredRenderer import *
-from DiskPrimitiveTest import DiskPrimitiveTest
-from ToGLTextureConverter import TestToGLTexureConverter
-from PrimitiveTest import *
-from CoordinateSystemTest import CoordinateSystemTest
-from TextureLoaderTest import TextureLoaderTest
-from FontTest import FontTest
-from FontLoaderTest import FontLoaderTest
+IECoreGL.init( False )
 
-if IECore.withFreeType() :
+class FontTest( unittest.TestCase ) :
 
-	from TextTest import *
+	def test( self ) :
 
+		coreFont = IECore.Font( "test/IECore/data/fonts/Vera.ttf" )
+		glFont = IECoreGL.Font( coreFont )
+		
+		self.failUnless( glFont.coreFont().isSame( coreFont ) )
+		
+		self.failUnless( isinstance( glFont.texture(), IECoreGL.AlphaTexture ) )
+		
 if __name__ == "__main__":
     unittest.main()
